--- a/liteboardbackend/templates/demo_tutorial.html
+++ b/liteboardbackend/templates/demo_tutorial.html
@@ -58,7 +58,7 @@
             django-admin startproject myproject
         </p>
         <p>
-            where myproject is the name you want to name your project. Then enter
+            where myproject is the name you want to name your project. Then enter,
         </p>
         <p class="code">
             python manage.py runserver
