--- a/liteboardbackend/templates/credits.html
+++ b/liteboardbackend/templates/credits.html
@@ -6,17 +6,17 @@
             <div class="row">
                 <div class="column">
                     <img src="https://i.imgur.com/bxikcVP.jpg?1" class="profiler"/>
-                    <h4>Nikola Pavlovic</h4>
+                    <h5>Nikola Pavlovic</h5>
                     <ul>
-                        <li>Tutorial and Demo website front-end</li>
+                        <li>Tutorials and Demo website front-end</li>
                         <li>Documentation</li>
                     </ul>
                 </div>
                 <div class="column">
                     <img src="https://i.imgur.com/AelPfvy.jpg?1" class="profiler"/>
-                    <h4>Ryan Soliven</h4>
+                    <h5>Ryan Soliven</h5>
                     <ul>
-                        <li>Tutorial + demo website back-end</li>
+                        <li>Tutorials + demo website back-end</li>
                         <li>Documentation</li>
                     </ul>
                 </div>
