--- a/liteboardbackend/templates/credits.html
+++ b/liteboardbackend/templates/credits.html
@@ -16,7 +16,7 @@
                     <img src="https://i.imgur.com/AelPfvy.jpg?1" class="profiler"/>
                     <h5>Ryan Soliven</h5>
                     <ul>
-                        <li>Tutorials + demo website back-end</li>
+                        <li>Tutorials and demo website back-end</li>
                         <li>Documentation</li>
                     </ul>
                 </div>
