--- a/liteboardbackend/templates/credits.html
+++ b/liteboardbackend/templates/credits.html
@@ -5,41 +5,27 @@
             <h3>Credits</h3>
             <div class="row">
                 <div class="column">
-                    <img src="https://i.imgur.com/kGbl4NH.jpg" class="profiler"/>
-                    <h5>Christopher Ho</h5>
+                    <img src="https://i.imgur.com/bxikcVP.jpg?1" class="profiler"/>
+                    <h5>Nikola Pavlovic</h5>
                     <ul>
-                        <li>Tutorial website front-end</li>
+                        <li>Tutorials and Demo website front-end</li>
                         <li>Documentation</li>
                     </ul>
                 </div>
                 <div class="column">
-                    <img src="https://i.imgur.com/RYrz1kM.jpg" class="profiler"/>
-                    <h5>Jacob Dudarewicz</h5>
+                    <img src="https://i.imgur.com/AelPfvy.jpg?1" class="profiler"/>
+                    <h5>Ryan Soliven</h5>
                     <ul>
-                        <li>Tutorial + demo website back-end</li>
+                        <li>Tutorials and demo website back-end</li>
                         <li>Documentation</li>
                     </ul>
-                </div>
-                <div class="column">
-                    <img src="https://i.imgur.com/neJ0sd1.jpg" class="profiler"/>
-                    <h5>Jason Ho</h5>
-                    <ul>
-                        <li>Demo website front-end</li>
-                        <li>Documentation</li>
-                    </ul>  
                 </div>
             </div>
             <h3>References</h3>
-            <p><a href = "https://fonts.google.com/specimen/Roboto?selection.family=Roboto">Roboto Font</a></p>
-            <p><a href = "https://fonts.google.com/specimen/Roboto+Mono?selection.family=Roboto+Mono">Roboto Mono Font</a></p>
-            <p><a href = "https://www.w3schools.com/howto/howto_css_responsive_header.asp">Liteboard Header</a></p>
-            <p><a href = "https://www.w3schools.com/howto/howto_css_three_columns.asp">3 Columns in CSS</a></p>
-            <p><a href = "https://docs.djangoproject.com/en/2.1/">Django Documentation</a></p>
-            <p><a href = "https://www.youtube.com/watch?v=FNQxxpM1yOs&list=PLQVvvaa0QuDeA05ZouE4OzDYLHY-XH-Nd">Sentdex Django Tutorial</a></p>
-            <p><a href = "https://materializecss.com/">Materialize Documentation</a></p>
-            <p><a href = "https://stackoverflow.com/questions/52208625/materialize-parallax-doesnt-work-for-mobile">Parallax Mobile Fix</a></p>
-            <p><a href = "https://youtu.be/nqT8c5OFjEQ">Travesty Media materialize tutorial</a></p>
-            <p><a href = "https://www.w3schools.com/jsref/event_onscroll.asp">OnScroll Event</a></p>
+            <p><a href = "https://fonts.google.com/specimen/Lato">Lato Font</a></p>
+            <p><a href = "https://docs.djangoproject.com/en/2.1/">Django</a></p>
+            <p><a href = "https://materializecss.com/">Materialize</a></p>
+            <p><a href = "https://www.digitalocean.com/community/tutorials/how-to-set-up-django-with-postgres-nginx-and-gunicorn-on-ubuntu-16-04">DigitalOcean Setup</a></p>
         </div>
     </div>
 {% endblock %}
