--- a/liteboardbackend/templates/guideheader.html
+++ b/liteboardbackend/templates/guideheader.html
@@ -58,7 +58,8 @@
 
 		/* Style the content */
 		.content {
-			background-color: #ffffff;
+			background-color: #000000;
+            color: white
 			width: 100%;
 			padding-top: 10px;
 			padding-bottom: 10px;
