--- a/liteboardbackend/templates/guideheader.html
+++ b/liteboardbackend/templates/guideheader.html
@@ -21,13 +21,11 @@
 		.center {
 			display: block;
 			margin-left: auto;
-            color: #ffffff
 			margin-right: auto;
 			width: 50%;
 		}
 		body {
 			margin: 0;
-            color: #ffffff
 			font-family: 'Lato', sans-serif;
 		}
 		/* Style header */
@@ -60,8 +58,7 @@
 
 		/* Style the content */
 		.content {
-			background-color: #000000;
-            color: #ffffff
+			background-color: #ffffff;
 			width: 100%;
 			padding-top: 10px;
 			padding-bottom: 10px;
@@ -69,7 +66,6 @@
 
 		.text-content {
 			width: 85%;
-            color: #ffffff
 			text-align: justify;
 			margin-left: auto;
 			margin-right: auto;
@@ -77,7 +73,6 @@
         
         .code {
             text-align: center;
-            color: #ffffff
 			margin-top: 30px;
 			margin-bottom: 30px;
 			font-family: "Times New Roman", Times, serif;
