--- a/liteboardbackend/templates/guideheader.html
+++ b/liteboardbackend/templates/guideheader.html
@@ -138,7 +138,7 @@
         <div class="topnav">
             <a href="{% url 'home' %}">Framework Summary</a>
             <a href="{% url 'install' %}">Installation Tutorial</a>
-            <a href="{% url 'demo' %}">Demo Creation</a>
+            <a href="{% url 'demo' %}">Demo Tutorial</a>
             <a href="{% url 'demohome' %}">Demo Page</a>
             <a href="{% url 'conclusion' %}">Conclusion</a>
             <a href="{% url 'credits' %}">Credits</a>
@@ -157,7 +157,7 @@
             <div class="centerfooter">
                 <div class="centerfooter">
                 <p><a href="{% url 'home' %}">Framework Summary</a> &nbsp &nbsp  <a href="{% url 'install' %}">Installation Tutorial</a> 
-                &nbsp &nbsp  <a href="{% url 'demo' %}">Demo Creation</a>&nbsp &nbsp 
+                &nbsp &nbsp  <a href="{% url 'demo' %}">Demo Tutorial</a>&nbsp &nbsp 
                 <a href="{% url 'conclusion' %}">Conclusion</a>&nbsp &nbsp
                 <a href="{% url 'credits' %}">Credits</a>
                 </p>
