--- a/liteboardbackend/templates/framework_summary.html
+++ b/liteboardbackend/templates/framework_summary.html
@@ -1,7 +1,7 @@
 {% extends "guideheader.html" %}
 {% block content %}
 	<!-- Paragraphs and content -->
-	<div class="content">
+	<div class="content" style="color:white; background-color:#696969">
 		<div class="text-content">
 			<div class="frameworkpic">
 				<img src="https://front.id/sites/default/files/2017-05/materialize.png" style="width:500px;height:300px;"> <!-- Put alternate image -->
