--- a/liteboardbackend/templates/guideheader.html
+++ b/liteboardbackend/templates/guideheader.html
@@ -153,7 +153,7 @@
         </div>
     
         <!-- Footer -->
-        <div class="footer">
+        <div class="footer" style="background-color:#696969">
             <div class="centerfooter">
                 <div class="centerfooter">
                 <p><a href="{% url 'home' %}">Framework Summary</a> &nbsp &nbsp  <a href="{% url 'install' %}">Installation Tutorial</a> 
