--- a/liteboardbackend/templates/install_tutorial.html
+++ b/liteboardbackend/templates/install_tutorial.html
@@ -1,6 +1,6 @@
 {% extends "guideheader.html" %}
 {% block content %}
-<div class="content">
+<div class="content" style="color:white; background-color:#696969">
     <div class="text-content">
         <h3>Materialize Installation</h3>
         <p> To install materialize for your webpage, you need to import the materialize icon CSS, minified CSS, and JavaScript in the head element of your html page:
