--- a/liteboardbackend/templates/demo_tutorial.html
+++ b/liteboardbackend/templates/demo_tutorial.html
@@ -1,6 +1,6 @@
 {% extends "guideheader.html" %}
 {% block content %}
-<div class="content">
+<div class="content" style="color:white; background-color:#696969">
         <div class="text-content">
             <h3>Materialize Demo</h3>
             <h5>CSS and Buttons</h5>
