--- a/liteboardbackend/templates/credits.html
+++ b/liteboardbackend/templates/credits.html
@@ -1,6 +1,6 @@
 {% extends "guideheader.html" %}
 {% block content %}
-<div class="content">
+<div class="content" style="color:white; background-color:#696969">
         <div class="text-content">
             <h3>Credits</h3>
             <br>
