--- a/liteboardbackend/templates/demo_tutorial.html
+++ b/liteboardbackend/templates/demo_tutorial.html
@@ -8,7 +8,7 @@
             <br>Materialize has a large colour palette to choose from. This allows for a great amount of customizability when creating backgrounds, panels, buttons, or text.</p>
             <p>In this tutorial we have five teal buttons with white text. To change the shade of teal simpily type: <br> lighten/darken-(amount) <br> Where lighten makes the colour brighter and darken makes it darker.</p>
             <!-- <img src="https://i.imgur.com/OhQepn0.png" class = "regularpic"/><br><br> -->
-            <div class="card-panel"><xmp>
+            <div class="card-panel" style="color:black"><xmp>
             <a class="btn-large teal lighten-2 white-text btn">Button</a>
             <a class="btn-large teal lighten-1 white-text btn">Button</a>
             <a class="btn-large teal white-text btn">Button</a>
