--- a/liteboardbackend/templates/demo_tutorial.html
+++ b/liteboardbackend/templates/demo_tutorial.html
@@ -38,7 +38,7 @@
             <p>Materialize can set certain CSS styles or hide certain content depending on the device. <br>
             To have parrallax work on mobile devices, the height of the image must to be lowered since the image height of parrallax is set to 500 pixels by default.
             </p>
-            <div class="card-panel style="color:black""><xmp>
+            <div class="card-panel" style="color:black"><xmp>
                  @media only screen and (max-width: 600px) {
                     .parallax-container {
                         height: 150px;
