--- a/liteboardbackend/templates/home.html
+++ b/liteboardbackend/templates/home.html
@@ -21,7 +21,7 @@
 
         <body>
         <div id="add" class="fixed-action-btn">
-            <a class="btn-floating btn-large light-blue waves-effect waves-light scale-transition scale-out" href="{% url 'submit' %}">
+            <a class="btn-floating btn-large yellow waves-effect waves-light scale-transition scale-out" href="{% url 'submit' %}">
             <i class="large material-icons">add</i>
             </a>
         </div>
