--- a/liteboardbackend/templates/header.html
+++ b/liteboardbackend/templates/header.html
@@ -42,7 +42,7 @@
         }
 
         .header a.active {
-            background-color: dodgerblue;
+            background-color: yellow;
             color: white;
         }
 
