--- a/liteboardbackend/templates/header.html
+++ b/liteboardbackend/templates/header.html
@@ -71,7 +71,7 @@
         <div class="header">
             <a href="{% url 'demohome' %}" class="logo"><img src="https://i.imgur.com/2uaKK6Y.png" width="35px"/>imageboard</a>
             <div class="header-right">
-                <a class="btn-large light-blue darken-1 white-text waves-effect waves-light btn" href="{% url 'submit' %}">Add photo</a>
+                <a class="btn-large yellow darken-1 white-text waves-effect waves-light btn" href="{% url 'submit' %}">Add photo</a>
             </div>
         </div>
         <div>
