--- a/liteboardbackend/templates/submit.html
+++ b/liteboardbackend/templates/submit.html
@@ -10,7 +10,7 @@
         <form method="POST">
             {% csrf_token %}
             {{ form.as_p }}
-            <button class="light-blue darken-1 white-text btn waves-effect waves-light" type="submit" 
+            <button class="yellow darken-1 white-text btn waves-effect waves-light" type="submit" 
             name="action">Submit
             <i class="material-icons right">send</i>
             </button>
